--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ for (i = 0; i < coll.length; i++) {
 }
 </script>
 
-
+<div>
 <!---copy code-->
 <p style="color:wheat;font-size:55px;text-align:center;">How to copy a TEXT to Clipboard on a Button-Click</p>
 
@@ -320,12 +320,12 @@ for (i = 0; i < coll.length; i++) {
   
 <br/><br/><input class="textBox" type="text" id="" placeholder="Dont belive me?..TEST it here..;)" />
 </center>
-  
+</div>  
   
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.01<br />
+  		Version:1.02<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
