--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ p
   width:300px;
 }
 
-button
+copybutton
 {
   height:30px;
   width:150px;
@@ -315,8 +315,8 @@ for (i = 0; i < coll.length; i++) {
 <p id="p1">Hello, I'm TEXT 1</p>
 <p id="p2">Hi, I'm the 2nd TEXT</p><br/>
 
-<button onclick="copyToClipboard('#p1')">Copy TEXT 1</button>
-<button onclick="copyToClipboard('#p2')">Copy TEXT 2</button>
+<copybutton onclick="copyToClipboard('#p1')">Copy TEXT 1</copybutton>
+<copybutton onclick="copyToClipboard('#p2')">Copy TEXT 2</copybutton>
   
 <br/><br/><input class="textBox" type="text" id="" placeholder="Dont belive me?..TEST it here..;)" />
 </center>
@@ -325,7 +325,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.02<br />
+  		Version:1.03<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
