--- a/index.html
+++ b/index.html
@@ -318,11 +318,8 @@ for (i = 0; i < coll.length; i++) {
 <copybutton onclick="copyToClipboard('#p1')">Copy TEXT 1</copybutton>
 <copybutton onclick="copyToClipboard('#p2')">Copy TEXT 2</copybutton>
   
-<br/><br/><input class="textarea" type="textarea a" id="" placeholder="Dont belive me?..TEST it here..;)" />
+<br/><br/><input class="text" type="text" id="" placeholder="Dont belive me?..TEST it here..;)" />
 </center>
-
-
-	
 </div>  
   
 <Footer>
