--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" 		content="width=device-width, initial-scale=1.0">
 	<meta name="description" 	content="Chris Brown | Quality Assurance"> <!---Web Searches--->
 	<Title>Chris Brown | SQL</Title>
-
+	 <link rel="stylesheet" href="modal.css">
 	
 <style>
 .collapsible {
@@ -237,10 +237,111 @@ body, html {
 		<br />
 		<b>This section lists common queries and scripts for SQL.</b><br /> 
 		<br />
-		Query: <br /><br />
-		Script: <br />
-      		</p>
-    	</div>
+		<button id="myBtn">Button 1</button></b><br /> 
+   		<button id="myBtn1">Button 2</button></b><br /> 
+    		<button id="myBtn2">Button 3</button></b><br />  	
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="close">&times;</span>
+                <h2>Button 1 Clicked</h2>
+            </div>
+            <div class="modal-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aspernatur perferendis ad sunt.
+                    Eius, possimus? Quae at eum repudiandae obcaecati vitae accusantium, perferendis sapiente
+                    temporibus, necessitatibus voluptatem iste cumque et?</p>
+            </div>
+            <div class="modal-footer">
+                <h3>Modal Footer</h3>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- The Modal -->
+    <div id="myModal1" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="close">&times;</span>
+                <h2>Button 2 Clicked</h2>
+            </div>
+            <div class="modal-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatum ipsa cum aliquid, ex
+                    inventore, culpa obcaecati modi deleniti enim consequuntur tenetur. Earum numquam sit ratione eum
+                    sequi praesentium, unde maxime ullam iure rem mollitia perferendis eos possimus neque, nisi dicta.
+                    Obcaecati dignissimos, dolores labore rerum quisquam non explicabo repellat!</p>
+            </div>
+            <div class="modal-footer">
+                <h3>Modal Footer</h3>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- The Modal -->
+    <div id="myModal2" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="close">&times;</span>
+                <h2>Button 3 Clicked</h2>
+            </div>
+            <div class="modal-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium quia non laborum
+                    ea, similique ex iusto minus obcaecati optio sapiente aut eveniet porro odio veniam excepturi
+                    facilis iste fuga? Porro atque odio, fuga blanditiis voluptate ducimus veritatis id ea possimus?
+                    Facilis tempore officiis quos assumenda dolorem placeat sed veniam dolor eveniet magnam. Iure ullam
+                    odit qui, magni suscipit pariatur nesciunt temporibus aspernatur doloribus quis nobis quas esse
+                    perspiciatis, asperiores eum quidem placeat minus alias veniam molestias sit. Ipsam numquam,
+                    sapiente facere voluptatem eum, maiores blanditiis cupiditate corporis quos ratione, quia
+                    praesentium dolore nihil voluptatum impedit quae consequatur sit pariatur.
+                </p>
+            </div>
+            <div class="modal-footer">
+                <h3>Modal Footer</h3>
+            </div>
+        </div>
+
+    </div>
+
+    <script>
+        var datamap = new Map([
+            [document.getElementById("myBtn"), document.getElementById("myModal")],
+            [document.getElementById("myBtn1"), document.getElementById("myModal1")],
+            [document.getElementById("myBtn2"), document.getElementById("myModal2")]
+        ]);
+
+        datamap.forEach((value, key) => {
+            doModal(key, value);
+        });
+
+        function doModal(anchor, popupbox) {
+
+            // Get the <span> element that closes the modal
+            var span = popupbox.getElementsByClassName("close")[0];
+
+            anchor.addEventListener("click", function (event) {
+                popupbox.style.display = "block";
+            });
+
+            span.addEventListener("click", function (event) {
+                popupbox.style.display = "none";
+            });
+
+            window.addEventListener("click", function (event) {
+                if (event.target == popupbox) {
+                    popupbox.style.display = "none";
+                }
+            });
+        }
+    </script>
+</div>
  
 	
 	
@@ -266,7 +367,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.00<br />
+  		Version:1.01<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
