--- a/index.html
+++ b/index.html
@@ -338,25 +338,29 @@ body, html {
 		<br />
 		<b>This section lists common queries and scripts for SQL.</b><br /> 
 		<br />
-		<button id="myBtn">Button 1</button></b><br /> 
-   		<button id="myBtn1">Button 2</button></b><br /> 
-    		<button id="myBtn2">Button 3</button></b><br />  	
-    <!-- The Modal -->
+		<b>Queries</b><br />
+		<br />
+		<button id="myBtn">Query 1</button></b><br /> 
+		<br />
+   		<button id="myBtn1">Query 2</button></b><br /> 
+		<b>Scripts</b><br /> 
+		<br />
+    		<button id="myBtn2">Script 1</button></b><br />  	
+    
+<!-- The Modal -->
     <div id="myModal" class="modal">
 
         <!-- Modal content -->
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Button 1 Clicked</h2>
+                <h2>Button 1 Header</h2>
             </div>
             <div class="modal-body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aspernatur perferendis ad sunt.
-                    Eius, possimus? Quae at eum repudiandae obcaecati vitae accusantium, perferendis sapiente
-                    temporibus, necessitatibus voluptatem iste cumque et?</p>
+                <p>Query 1</p>
             </div>
             <div class="modal-footer">
-                <h3>Modal Footer</h3>
+                <h3>Button 1 Footer</h3>
             </div>
         </div>
 
@@ -369,16 +373,13 @@ body, html {
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Button 2 Clicked</h2>
+                <h2>Button 2 Header</h2>
             </div>
             <div class="modal-body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatum ipsa cum aliquid, ex
-                    inventore, culpa obcaecati modi deleniti enim consequuntur tenetur. Earum numquam sit ratione eum
-                    sequi praesentium, unde maxime ullam iure rem mollitia perferendis eos possimus neque, nisi dicta.
-                    Obcaecati dignissimos, dolores labore rerum quisquam non explicabo repellat!</p>
+                <p>Query 2 </p>
             </div>
             <div class="modal-footer">
-                <h3>Modal Footer</h3>
+                <h3>modal 2 Footer</h3>
             </div>
         </div>
 
@@ -391,21 +392,13 @@ body, html {
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Button 3 Clicked</h2>
+                <h2>Button 3 Header</h2>
             </div>
             <div class="modal-body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium quia non laborum
-                    ea, similique ex iusto minus obcaecati optio sapiente aut eveniet porro odio veniam excepturi
-                    facilis iste fuga? Porro atque odio, fuga blanditiis voluptate ducimus veritatis id ea possimus?
-                    Facilis tempore officiis quos assumenda dolorem placeat sed veniam dolor eveniet magnam. Iure ullam
-                    odit qui, magni suscipit pariatur nesciunt temporibus aspernatur doloribus quis nobis quas esse
-                    perspiciatis, asperiores eum quidem placeat minus alias veniam molestias sit. Ipsam numquam,
-                    sapiente facere voluptatem eum, maiores blanditiis cupiditate corporis quos ratione, quia
-                    praesentium dolore nihil voluptatum impedit quae consequatur sit pariatur.
-                </p>
+                <p>Script 1</p>
             </div>
             <div class="modal-footer">
-                <h3>Modal Footer</h3>
+                <h3>button 3 Footer</h3>
             </div>
         </div>
 
@@ -468,7 +461,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.01<br />
+  		Version:1.02<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
