--- a/index.html
+++ b/index.html
@@ -157,26 +157,17 @@ body, html {
 /*start modal8*/
      /* The Modal (background) */
         .modal {
-            display: none;
-            /* Hidden by default */
-            position: fixed;
-            /* Stay in place */
-            z-index: 1;
-            /* Sit on top */
-            padding-top: 80px;
-            /* Location of the box */
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 80px; /* Location of the box */
             left: 0;
             top: 0;
-            width: 100%;
-            /* Full width */
-            height: 100%;
-            /* Full height */
-            overflow: auto;
-            /* Enable scroll if needed */
-            background-color: rgb(0, 0, 0);
-            /* Fallback color */
-            background-color: rgba(0, 0, 0, 0.4);
-            /* Black w/ opacity */
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0); /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
             overflow: auto;
         }
 
@@ -185,11 +176,11 @@ body, html {
             max-height: 80%;
             overflow: auto;
             position: relative;
-            background-color: #fefefe;
+            background-color: white;
             margin: auto;
             padding: 0;
             border: 1px solid #888;
-            width: 80%;
+            width: 40%;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             -webkit-animation-name: animatetop;
             -webkit-animation-duration: 0.4s;
@@ -239,7 +230,7 @@ body, html {
 
         .modal-header {
             padding: 2px 16px;
-            background-color: #5cb85c;
+            background-color: #F8F9F9;
             color: white;
         }
 
@@ -249,7 +240,7 @@ body, html {
 
         .modal-footer {
             padding: 2px 16px;
-            background-color: #5cb85c;
+            background-color: #F8F9F9;
             color: white;
         }
 /*modal done*/
@@ -340,12 +331,14 @@ body, html {
 		<br />
 		<b>Queries</b><br />
 		<br />
-		<button id="myBtn">Query 1</button></b><br /> 
+		Query 1: <button id="myBtn">Open Query 1</button></b><br /> 
 		<br />
-   		<button id="myBtn1">Query 2</button></b><br /> 
+   		Query 2: <button id="myBtn1">Open Query 2</button></b><br /> 
+		<br /> 
+		<br /> 
 		<b>Scripts</b><br /> 
 		<br />
-    		<button id="myBtn2">Script 1</button></b><br />  	
+    		Script 1: <button id="myBtn2">Open Script 1</button></b><br />  	
     
 <!-- The Modal -->
     <div id="myModal" class="modal">
