--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@ body, html {
 
         /* Modal Content */
         .modal-content {
-            max-height: 80%;
+            max-height: 50%;
             overflow: auto;
             position: relative;
             background-color: white;
             margin: auto;
             padding: 0;
-            border: 1px solid #888;
-            width: 40%;
+            border: 2px solid #888;
+            width: 50%;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             -webkit-animation-name: animatetop;
             -webkit-animation-duration: 0.4s;
@@ -191,7 +191,7 @@ body, html {
         /* Add Animation */
         @-webkit-keyframes animatetop {
             from {
-                top: -300px;
+                top: -50%;
                 opacity: 0
             }
 
@@ -203,7 +203,7 @@ body, html {
 
         @keyframes animatetop {
             from {
-                top: -300px;
+                top: -50%;
                 opacity: 0
             }
 
@@ -347,13 +347,13 @@ body, html {
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Button 1 Header</h2>
+                <h2 style="font-size:14pt;">Button 1 Header</h2>
             </div>
             <div class="modal-body">
                 <p>Query 1</p>
             </div>
             <div class="modal-footer">
-                <h3>Button 1 Footer</h3>
+                <h3 style="font-size:14pt;">Button 1 Footer</h3>
             </div>
         </div>
 
@@ -366,13 +366,13 @@ body, html {
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Button 2 Header</h2>
+                <h2style="font-size:14pt;">Button 2 Header</h2>
             </div>
             <div class="modal-body">
                 <p>Query 2 </p>
             </div>
             <div class="modal-footer">
-                <h3>modal 2 Footer</h3>
+                <h3 style="font-size:14pt;">modal 2 Footer</h3>
             </div>
         </div>
 
@@ -385,14 +385,14 @@ body, html {
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2>Button 3 Header</h2>
+                <h2 style="font-size:14pt;">Button 3 Header</h2>
             </div>
             <div class="modal-body">
                 <p>Script 1</p>
             </div>
             <div class="modal-footer">
-                <h3>button 3 Footer</h3>
-            </div>
+                <h3 style="font-size:14pt;">button 3 Footer</h3>
+		</div>
         </div>
 
     </div>
