--- a/index.html
+++ b/index.html
@@ -364,16 +364,17 @@ body, html {
     <div id="myModal2" class="modal">
 
         <!-- Modal content -->
-        <div class="modal-content">
+           <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2style="font-size:14pt;">Button 2 Header</h2>
+                <h2 style="font-size:14pt;">Button 2 Header</h2>
             </div>
             <div class="modal-body">
-                <p>Query 2 </p>
+                <p>Query 1</p>
             </div>
             <div class="modal-footer">
-                <h3 style="font-size:14pt;">modal 2 Footer</h3>
+                <h3 style="font-size:14pt;">Button 2 Footer</h3>
+		    <button id="copy">Copy</button>
             </div>
         </div>
 
@@ -455,7 +456,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.04<br />
+  		Version:1.05<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
