--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@ body, html {
             </div>
             <div class="modal-footer">
                 <h3 style="font-size:14pt;">button 3 Footer</h3>
+		    <button id="copy">Copy</button>
 		</div>
         </div>
 
