--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 <style>
 .collapsible {
- 	background-color: #ab3629;
+ 	background-color: #c75528;
 	height: 10%; /*reactive*/
 	/*margin-left: 14%; controlled by main class*/
   	color: white;
@@ -26,7 +26,7 @@
 }
 
 .active, .collapsible:hover {
-  background-color: #87291f;
+  background-color: #9e411c;
 }
 
 .collapsible:after {
