--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ body, html {
 
         .modal-header {
             padding: 2px 16px;
-            background-color: #7b8696;
+            background-color: #69341f;
             color: white;
         }
 
@@ -240,7 +240,7 @@ body, html {
 
         .modal-footer {
             padding: 2px 16px;
-            background-color: #7b8696;
+            background-color: #69341f;
             color: white;
         }
 /*modal done*/
