--- a/index.html
+++ b/index.html
@@ -390,6 +390,9 @@ body, html {
                 <h2 style="font-size:14pt;">Button 3 Header</h2>
             </div>
             <div class="modal-body">
+		<textarea id="Textarea3" name="Textarea3" rows="6" cols="50">
+  		At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
+  		</textarea>
                 <p>Script 1</p>
             </div>
             <div class="modal-footer">
