--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ body, html {
 		<textarea id="Textarea3" name="Textarea3" rows="6" cols="50">
   		At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
   		</textarea>
-                <p>Script 1</p>
+                <!---<p>Script 1</p> --->
             </div>
             <div class="modal-footer">
                 <h3 style="font-size:14pt;">button 3 Footer</h3>
