--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ body, html {
         }
 
         .modal-footer {
-            padding: 2px 16px;
+            padding: 2% 2%;
             background-color: #69341f;
             color: white;
         }
