--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ body, html {
             </div>
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
-		    <h3 style="font-size:14pt;<button id="copy">Copy</button></h3>
+		    <h3 style="font-size:14pt;"<button id="copy">Copy</button></h3>
 		    </div>
         </div>
 
@@ -460,7 +460,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.10<br />
+  		Version:1.11<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
