--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ body, html {
 
         /* The Close Button */
         .close {
-            color: red;
+            color: white;
             float: right;
             font-size: 28px;
             font-weight: bold;
@@ -235,7 +235,7 @@ body, html {
         }
 
         .modal-body {
-            padding: 2px 16px;
+            padding: 2% 2%;
         }
 
         .modal-footer {
@@ -397,7 +397,7 @@ body, html {
             </div>
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
-		    <h3 style="font-size:14pt;"<button id="copy">Copy</button></h3>
+		    <button id="copy">Copy</button>
 		    </div>
         </div>
 
@@ -460,7 +460,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.11<br />
+  		Version:1.12<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
