--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ body, html {
             background-color: white;
             margin: auto;
             padding: 0;
-            border: 2px solid #888;
-            width: 50%;
+            border: 2% solid #888;
+            width: 60%;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             -webkit-animation-name: animatetop;
             -webkit-animation-duration: 0.4s;
@@ -460,7 +460,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.12<br />
+  		Version:1.13<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
