--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@ body, html {
             <div class="modal-header">
                 <span class="close">&times;</span>
                 <h2 style="font-size:14pt;">Button 3 Header</h2>
+		    <p><em>The following contents can be copied and can be pasted</em><p>
             </div>
             <div class="modal-body">
 		<textarea id="Textarea3" name="Textarea3" rows="6" cols="75">
