--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ body, html {
 		<br />
     		Script 1: <button id="myBtn3">Open Script 1</button></b><br />  	
     
-<!-- The Modal -->
+<!-- The Modal 1-->
     <div id="myModal1" class="modal">
 
         <!-- Modal content -->
@@ -360,7 +360,7 @@ body, html {
 
     </div>
 
-    <!-- The Modal -->
+    <!-- The Modal 2-->
     <div id="myModal2" class="modal">
 
         <!-- Modal content -->
@@ -370,7 +370,7 @@ body, html {
                 <h2 style="font-size:14pt;">Button 2 Header</h2>
             </div>
             <div class="modal-body">
-                <p>Query 1</p>
+                <p>Query 2</p>
             </div>
             <div class="modal-footer">
                 <h3 style="font-size:14pt;">Button 2 Footer</h3>
@@ -383,7 +383,7 @@ body, html {
     <!-- The Modal -->
     <div id="myModal3" class="modal">
 
-        <!-- Modal content -->
+        <!-- Modal content 3-->
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
@@ -395,12 +395,21 @@ body, html {
 At w3schools.com you will learn how to make a website. 
 They offer free tutorials in all web development technologies.
   		</textarea>
-                <!---<p>Script 1</p> --->
             </div>
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
 		    <button id="copy">Copy</button>
 		    </div>
+		
+		<script>	
+		// Type 2
+		document.getElementById('Copy').addEventListener('click', Copy);
+		async function Copy() {
+	  	let text = document.querySelector("#Textarea3").value;
+	  	await navigator.clipboard.writeText(text);
+		}
+		</script>
+		</d>
         </div>
 
     </div>
@@ -462,7 +471,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.13<br />
+  		Version:1.14<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
