--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ They offer free tutorials in all web development technologies.
 		// Type 2
 		document.getElementById('Copy').addEventListener('click', Copy);
 		async function Copy() {
-	  	let text = document.querySelector("#Textarea3").value;
+	  	let textarea3 = document.querySelector("#Textarea3").value;
 	  	await navigator.clipboard.writeText(text);
 		}
 		</script>
@@ -471,7 +471,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14<br />
+  		Version:1.14a<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
