--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14a<br />
+  		Version:1.14b<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
