--- a/index.html
+++ b/index.html
@@ -391,18 +391,25 @@ body, html {
 		    <p><em>The following contents can be copied and can be pasted</em><p>
             </div>
             <div class="modal-body">
-		<textarea id="Textarea3" name="Textarea3" type="text" rows="6" cols="75">
+		<!---
+		 <textarea id="Textarea3" name="Textarea3" type="text" rows="6" cols="75">
 At w3schools.com you will learn how to make a website. 
 They offer free tutorials in all web development technologies.
   		</textarea>
             </div>
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
-		    <button id="copy">Copy</button>
+		<!---<button id="copy">Copy</button>
 		    </div>
+		--->
 		
 		<!---<input id="input" type="text" /> --->
 		<!---<button id="clipboardCopy"> clipboardCopy </button>--->
+		
+		<input id="input" type="text" />
+		<button id="execCopy"> execCopy </button>
+		<button id="clipboardCopy"> clipboardCopy </button>
+		
 		
 		<script>	
 		// Type 2
@@ -474,7 +481,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14b<br />
+  		Version:1.14C<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
