--- a/index.html
+++ b/index.html
@@ -402,13 +402,11 @@ They offer free tutorials in all web development technologies.
 		<!---<button id="copy">Copy</button>
 		    </div>
 		--->
-		
-		<!---<input id="input" type="text" /> --->
-		<!---<button id="clipboardCopy"> clipboardCopy </button>--->
-		
+				
 		<input id="input" type="text" />
 		<button id="execCopy"> execCopy </button>
 		<button id="clipboardCopy"> clipboardCopy </button>
+		</DIV>
 		
 		
 		<script>	
@@ -481,7 +479,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14C<br />
+  		Version:1.14d<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
