--- a/index.html
+++ b/index.html
@@ -404,7 +404,6 @@ They offer free tutorials in all web development technologies.
 		--->
 				
 		<input id="input" type="text" />
-		<button id="execCopy"> execCopy </button>
 		<button id="clipboardCopy"> clipboardCopy </button>
 		</DIV>
 		
@@ -417,11 +416,9 @@ They offer free tutorials in all web development technologies.
 	  	await navigator.clipboard.writeText(text);
 		}
 		</script>
-		</d>
-        </div>
-
     </div>
 
+	    
     <script>
         var datamap = new Map([
             [document.getElementById("myBtn1"), document.getElementById("myModal1")],
@@ -473,13 +470,14 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
+</DIV>
 
   
   
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14d<br />
+  		Version:1.14E<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
