--- a/index.html
+++ b/index.html
@@ -396,12 +396,12 @@ body, html {
 At w3schools.com you will learn how to make a website. 
 They offer free tutorials in all web development technologies.
   		</textarea>
-            </div>
+            </div>--->
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
-		<!---<button id="copy">Copy</button>
-		    </div>
-		--->
+		<!---<button id="copy">Copy</button>--->
+		<!---</div>--->
+		
 				
 		<input id="input" type="text" />
 		<button id="clipboardCopy"> clipboardCopy </button>
@@ -477,7 +477,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14E<br />
+  		Version:1.14f<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
