--- a/index.html
+++ b/index.html
@@ -405,14 +405,14 @@ They offer free tutorials in all web development technologies.
 				
 		<input id="input" type="text" />
 		<button id="clipboardCopy"> clipboardCopy </button>
-		</DIV>
+		
 		
 		
 		<script>	
 		// Type 2
 		document.getElementById('Copy').addEventListener('click', Copy);
 		async function Copy() {
-	  	let text= document.querySelector("#Textarea3").value;
+	  	let text= document.querySelector("#INPUT").value;
 	  	await navigator.clipboard.writeText(text);
 		}
 		</script>
@@ -477,7 +477,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14f<br />
+  		Version:1.14G<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
