--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ They offer free tutorials in all web development technologies.
 				
 		<input id="input" type="text" />
 		<button id="clipboardCopy"> clipboardCopy </button>
-		
+		</div>
 		
 		
 		<script>	
@@ -451,6 +451,7 @@ They offer free tutorials in all web development technologies.
         }
     </script>
 </div>
+</div>
  
 	
 	
@@ -477,7 +478,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14G<br />
+  		Version:1.14h<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
