--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@ body, html {
 At w3schools.com you will learn how to make a website. 
 They offer free tutorials in all web development technologies.
   		</textarea>
-            </div>--->
+		--->
+            </div>
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
 		<!---<button id="copy">Copy</button>--->
@@ -478,7 +479,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14h<br />
+  		Version:1.14I<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
