--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ body, html {
  footer {
 	/*position: Fixed; this makes it sticky always at the bottom of the page*/
 	/*margin-left: 40px;*/
-	/*margin-left: 4%; controlled by main class*/
+	margin-left: 17%; controlled by main class*/
 	width: 100%;
 	padding: 0px 0px 10px 0px; /*top,right,bottom, left */
 	left: 0;
@@ -391,13 +391,11 @@ body, html {
 		    <p><em>The following contents can be copied and can be pasted</em><p>
             </div>
             <div class="modal-body">
-		<!---
-		 <textarea id="Textarea3" name="Textarea3" type="text" rows="6" cols="75">
+		<textarea id="Textarea3" name="Textarea3" type="text" rows="6" cols="75">
 At w3schools.com you will learn how to make a website. 
 They offer free tutorials in all web development technologies.
   		</textarea>
-		--->
-            </div>
+		</div>
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
 		<!---<button id="copy">Copy</button>--->
@@ -418,6 +416,7 @@ They offer free tutorials in all web development technologies.
 		}
 		</script>
     </div>
+	    
 
 	    
     <script>
@@ -452,7 +451,7 @@ They offer free tutorials in all web development technologies.
         }
     </script>
 </div>
-</div>
+
  
 	
 	
@@ -479,7 +478,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14I<br />
+  		Version:1.14j<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
