--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ body, html {
  footer {
 	/*position: Fixed; this makes it sticky always at the bottom of the page*/
 	/*margin-left: 40px;*/
-	margin-left: 17%; controlled by main class*/
+	/*margin-left: 17%; controlled by main class*/
 	width: 100%;
 	padding: 0px 0px 10px 0px; /*top,right,bottom, left */
 	left: 0;
@@ -478,7 +478,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14j<br />
+  		Version:1.14K<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
