--- a/index.html
+++ b/index.html
@@ -347,13 +347,15 @@ body, html {
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2 style="font-size:14pt;">Button 1 Header</h2>
+                <h2 style="font-size:14pt;">Query 1: Basic Select Statement</h2>
+		<p><em>The following contents can be copied and can be pasted</em><p>
             </div>
             <div class="modal-body">
-                <p>Query 1</p>
+                <p>Select * from table_name</p>
+		    <p><em>Replace table_name with actual table name.</em></p>
             </div>
             <div class="modal-footer">
-                <h3 style="font-size:14pt;">Button 1 Footer</h3>
+                <!---<h3 style="font-size:14pt;">Button 1 Footer</h3>--->
 		    <button id="copy">Copy</button>
             </div>
         </div>
@@ -367,13 +369,14 @@ body, html {
            <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2 style="font-size:14pt;">Button 2 Header</h2>
+                <h2 style="font-size:14pt;">Query 2: Basic Select Statement with where clause</h2>
+		<p><em>The following contents can be copied and can be pasted</em><p>
             </div>
             <div class="modal-body">
-                <p>Query 2</p>
+                <p>Select * from table_name where variable_A</p>
             </div>
             <div class="modal-footer">
-                <h3 style="font-size:14pt;">Button 2 Footer</h3>
+                <!---<h3 style="font-size:14pt;">Button 2 Footer</h3>--->
 		    <button id="copy">Copy</button>
             </div>
         </div>
@@ -387,7 +390,7 @@ body, html {
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h2 style="font-size:14pt;">Button 3 Header</h2>
+                <h2 style="font-size:14pt;">Script 1: Basic Update Script</h2>
 		    <p><em>The following contents can be copied and can be pasted</em><p>
             </div>
             <div class="modal-body">
@@ -478,7 +481,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14K<br />
+  		Version:1.14l<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
