--- a/index.html
+++ b/index.html
@@ -416,12 +416,12 @@ They offer free tutorials in all web development technologies.
 		// Type 2
 		document.getElementById('Copy').addEventListener('click', Copy);
 		async function Copy() {
-	  	let text= document.querySelector("#INPUT").value;
+	  	let text= document.querySelector("#input").value;
 	  	await navigator.clipboard.writeText(text);
 		}
 		</script>
     </div>
-</div>
+
 	    
 
 	    
@@ -484,7 +484,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14m<br />
+  		Version:1.14n<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
