--- a/index.html
+++ b/index.html
@@ -414,10 +414,10 @@ They offer free tutorials in all web development technologies.
 		
 		<script>	
 		// Type 2
-		document.getElementById('Copy').addEventListener('click', Copy);
-		async function Copy() {
-	  	let text= document.querySelector("#input").value;
-	  	await navigator.clipboard.writeText(text);
+		document.getElementById('clipboardCopy').addEventListener('click', clipboardCopy);
+		async function clipboardCopy() {
+  		let text = document.querySelector("#input").value;
+  		await navigator.clipboard.writeText(text);
 		}
 		</script>
     </div>
@@ -484,7 +484,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14n<br />
+  		Version:1.14o<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
