--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ They offer free tutorials in all web development technologies.
 		// Type 2
 		document.getElementById('clipboardCopy').addEventListener('click', clipboardCopy);
 		async function clipboardCopy() {
-  		let text = document.querySelector("#input").value;
+  		let text = document.querySelector("#Textarea3").value;
   		await navigator.clipboard.writeText(text);
 		}
 		</script>
@@ -484,7 +484,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14o<br />
+  		Version:1.14p<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
