--- a/index.html
+++ b/index.html
@@ -405,10 +405,7 @@ They offer free tutorials in all web development technologies.
                 <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
 		<!---<button id="copy">Copy</button>--->
 		<!---</div>--->
-		
-				
-		<input id="input" type="text" />
-		<button id="clipboardCopy"> clipboardCopy </button>
+		<button id="clipboardCopy"> Copy </button>
 		</div>
 		
 		
