--- a/index.html
+++ b/index.html
@@ -339,7 +339,9 @@ body, html {
 		<b>Scripts</b><br /> 
 		<br />
     		Script 1: <button id="myBtn3">Open Script 1</button></b><br />  	
-	
+		<!--- Each button ID should have a corresponding ModalID below--->	
+
+
 <!-- The Modal 1-->
     <div id="myModal1" class="modal">
 
@@ -351,10 +353,12 @@ body, html {
 		<p><em>The following contents can be copied and can be pasted</em><p>
             </div>
             <div class="modal-body">
-                <p>Select * from table_name</p>
-		    <p><em>Replace table_name with actual table name.</em></p>
-            </div>
-            <div class="modal-footer">
+                <textarea id="Textarea1" name="Textarea1" type="text" rows="6" cols="75">
+Select * from table_name
+  		</textarea>
+		</div>
+	
+	<div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">Button 1 Footer</h3>--->
 		    <button id="copy">Copy</button>
             </div>
@@ -373,8 +377,10 @@ body, html {
 		<p><em>The following contents can be copied and can be pasted</em><p>
             </div>
             <div class="modal-body">
-                <p>Select * from table_name where variable_A</p>
-            </div>
+                <textarea id="Textarea2" name="Textarea2" type="text" rows="6" cols="75">
+Select * from table_name where variable_A
+  		</textarea>
+		</div>
             <div class="modal-footer">
                 <!---<h3 style="font-size:14pt;">Button 2 Footer</h3>--->
 		    <button id="copy">Copy</button>
@@ -397,15 +403,11 @@ body, html {
             
 	<div class="modal-body">
 		<textarea id="Textarea3" name="Textarea3" type="text" rows="6" cols="75">
-At w3schools.com you will learn how to make a website. 
-They offer free tutorials in all web development technologies.
+not complemted: need to build basic udate
   		</textarea>
 		</div>
             <div class="modal-footer">
-                <!---<h3 style="font-size:14pt;">button 3 Footer</h3>--->
-		<!---<button id="copy">Copy</button>--->
-		<!---</div>--->
-		<button id="clipboardCopy"> Copy </button>
+  		<button id="clipboardCopy"> Copy </button>
 		</div>
 		
 		
@@ -481,7 +483,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.14p<br />
+  		Version:1.15<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
