--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ body, html {
         }
 
         .modal-header {
-             padding: 2% 2%;
+             padding: 1% 1%;
             background-color: #69341f;
             color: white;
         }
@@ -483,7 +483,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15<br />
+  		Version:1.15a (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
