--- a/index.html
+++ b/index.html
@@ -359,8 +359,7 @@ Select * from table_name
 		</div>
 	
 	<div class="modal-footer">
-                <!---<h3 style="font-size:14pt;">Button 1 Footer</h3>--->
-		    <button id="copy">Copy</button>
+ 		<button id="clipboardCopy"> Copy </button>
             </div>
         </div>
 
@@ -382,8 +381,8 @@ Select * from table_name where variable_A
   		</textarea>
 		</div>
             <div class="modal-footer">
-                <!---<h3 style="font-size:14pt;">Button 2 Footer</h3>--->
-		    <button id="copy">Copy</button>
+ 		<button id="clipboardCopy"> Copy </button>
+		</div>
             </div>
         </div>
 
@@ -406,7 +405,8 @@ Select * from table_name where variable_A
 not complemted: need to build basic udate
   		</textarea>
 		</div>
-            <div class="modal-footer">
+            
+	<div class="modal-footer">
   		<button id="clipboardCopy"> Copy </button>
 		</div>
 		
@@ -483,7 +483,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15a (v1.15 restore point)<br />
+  		Version:1.15b (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
