--- a/index.html
+++ b/index.html
@@ -383,7 +383,6 @@ Select * from table_name where variable_A
             <div class="modal-footer">
  		<button id="clipboardCopy"> Copy </button>
 		</div>
-            </div>
         </div>
 
     </div>
@@ -483,7 +482,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15b (v1.15 restore point)<br />
+  		Version:1.15c (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
