--- a/index.html
+++ b/index.html
@@ -383,6 +383,17 @@ Select * from table_name where variable_A
             <div class="modal-footer">
  		<button id="clipboardCopy"> Copy </button>
 		</div>
+		
+		  <script>	
+		// Type 2
+		document.getElementById('clipboardCopy').addEventListener('click', clipboardCopy);
+		async function clipboardCopy() {
+  		let text = document.querySelector("#Textarea2").value;
+  		await navigator.clipboard.writeText(text);
+		}
+		</script>
+    </div>  
+		 
         </div>
 
     </div>
@@ -482,7 +493,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15c (v1.15 restore point)<br />
+  		Version:1.15d (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
