--- a/index.html
+++ b/index.html
@@ -392,13 +392,10 @@ Select * from table_name where variable_A
   		await navigator.clipboard.writeText(text);
 		}
 		</script>
-    </div>  
-		 
-        </div>
+            </div>
+    
 
-    </div>
-
-    <!-- The Modal -->
+    <!-- The Modal 3-->
     <div id="myModal3" class="modal">
 
         <!-- Modal content 3-->
@@ -493,7 +490,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15d (v1.15 restore point)<br />
+  		Version:1.15e (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
