--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@ Select * from table_name where variable_A
 		}
 		</script>
             </div>
+	</div>
+</div>
     
 
     <!-- The Modal 3-->
@@ -426,7 +428,9 @@ not complemted: need to build basic udate
   		await navigator.clipboard.writeText(text);
 		}
 		</script>
-    </div>
+                </div>
+	</div>
+</div>
 
 	    
 
@@ -490,7 +494,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15e (v1.15 restore point)<br />
+  		Version:1.15F (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
