--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ Select * from table_name
  		<button id="clipboardCopy"> Copy </button>
             </div>
      </div>
-</div>
+
 
     <!-- The Modal 2-->
     <div id="myModal2" class="modal">
@@ -393,7 +393,7 @@ Select * from table_name where variable_A
 		</script>
             </div>
 	</div>
-
+</div>
     
 
     <!-- The Modal 3-->
@@ -429,6 +429,7 @@ not complemted: need to build basic udate
 		</script>
                 </div>
 	</div>
+</div>
 
 
 	    
@@ -493,7 +494,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15g (v1.15 restore point)<br />
+  		Version:1.15H (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
