--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@ not complemted: need to build basic udate
         }
     </script>
 </div>
+</div>
 
  
 	
@@ -494,7 +495,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15H (v1.15 restore point)<br />
+  		Version:1.15i (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
