--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ Select * from table_name
  		<button id="clipboardCopy"> Copy </button>
             </div>
      </div>
+</div>
 
 
     <!-- The Modal 2-->
@@ -496,7 +497,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15i (v1.15 restore point)<br />
+  		Version:1.15J (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
