--- a/index.html
+++ b/index.html
@@ -431,9 +431,7 @@ not complemted: need to build basic udate
                 </div>
 	</div>
 </div>
-
-
-	    
+ 
 
 	    
     <script>
@@ -469,6 +467,7 @@ not complemted: need to build basic udate
     </script>
 </div>
 </div>
+</div>
 
  
 	
@@ -491,13 +490,14 @@ for (i = 0; i < coll.length; i++) {
 </script>
 </DIV>
 </DIV>
+</DIV>
 
   
   
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15J (v1.15 restore point)<br />
+  		Version:1.15K (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
