--- a/index.html
+++ b/index.html
@@ -361,7 +361,16 @@ Select * from table_name
 	<div class="modal-footer">
  		<button id="clipboardCopy"> Copy </button>
             </div>
+		<script>	
+		// Type 2
+		document.getElementById('clipboardCopy').addEventListener('click', clipboardCopy);
+		async function clipboardCopy() {
+  		let text = document.querySelector("#Textarea2").value;
+  		await navigator.clipboard.writeText(text);
+		}
+		</script>
      </div>
+</div>
 </div>
 
 
@@ -497,7 +506,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15K (v1.15 restore point)<br />
+  		Version:1.15L (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
