--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@ Select * from table_name
      </div>
 </div>
 </div>
+</div>
 
 
     <!-- The Modal 2-->
@@ -403,6 +404,7 @@ Select * from table_name where variable_A
 		</script>
             </div>
 	</div>
+</div>
 </div>
     
 
@@ -439,6 +441,7 @@ not complemted: need to build basic udate
 		</script>
                 </div>
 	</div>
+</div>
 </div>
  
 
@@ -500,11 +503,11 @@ for (i = 0; i < coll.length; i++) {
 
 
   
-  
+ 
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15L (v1.15 restore point)<br />
+  		Version:1.15m (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
