--- a/index.html
+++ b/index.html
@@ -369,10 +369,9 @@ Select * from table_name
   		await navigator.clipboard.writeText(text);
 		}
 		</script>
-     </div>
-</div>
-</div>
-</div>
+     		</div> <!---SCRIPT CLOSE--->
+	    	</div> <!---CONTENT CLOSE--->
+		</div> <!---MODAL CLOSE--->
 
 
     <!-- The Modal 2-->
@@ -402,10 +401,9 @@ Select * from table_name where variable_A
   		await navigator.clipboard.writeText(text);
 		}
 		</script>
-            </div>
-	</div>
-</div>
-</div>
+     		</div> <!---SCRIPT CLOSE--->
+	    	</div> <!---CONTENT CLOSE--->
+		</div> <!---MODAL CLOSE--->
     
 
     <!-- The Modal 3-->
@@ -439,10 +437,9 @@ not complemted: need to build basic udate
   		await navigator.clipboard.writeText(text);
 		}
 		</script>
-                </div>
-	</div>
-</div>
-</div>
+     		</div> <!---SCRIPT CLOSE--->
+	    	</div> <!---CONTENT CLOSE--->
+		</div> <!---MODAL CLOSE--->
  
 
 	    
@@ -507,7 +504,7 @@ for (i = 0; i < coll.length; i++) {
 <Footer>
 	<HR>  
    		<b>Repository Information:</b><br />
-  		Version:1.15m (v1.15 restore point)<br />
+  		Version:1.15O (v1.15 restore point)<br />
   		Last Update:06-26-2021<br />
 	<HR>
 </Footer>
