--- a/index.html
+++ b/index.html
@@ -339,7 +339,8 @@ body, html {
 		<b>Scripts</b><br /> 
 		<br />
     		Script 1: <button id="myBtn3">Open Script 1</button></b><br />  	
-		<!--- Each button ID should have a corresponding ModalID below--->	
+		<!--- Each button ID should have a corresponding ModalID below--->
+		</DIV> <!--- CLOSE CONTENT--->
 
 
 <!-- The Modal 1-->
